--- a/example/test.html
+++ b/example/test.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: liuyingying
+ * @Date: 2021-09-24 14:31:27
+ * @Email: liuyingying1@jd.com
+ * @LastEditors: liuyingying
+ * @LastEditTime: 2021-09-24 14:53:52
+ * @Description: 
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,6 +17,12 @@
 <body>
     <p>fast-cache test</p>
     <script src="../release/bundle.js"></script>
+    <script>
+        var FC = window.FastCache;
+        var cache = new FC();
+        cache.set('a', 100)
+        console.log(cache.get('a'))
+    </script>
 </body>
 
 </html>
